fixed word wrap on tabs

--- a/components/posts/ListStyles.module.css
+++ b/components/posts/ListStyles.module.css
@@ -90,7 +90,7 @@
     min-width: 50%;
     position: relative;
     overflow: hidden;
-    aspect-ratio: auto 1.86333333;
+    aspect-ratio: auto 559 / 300;
   }
   .articleLayout .contentContainer .middleWrapper .image img {
     height: 100%;
@@ -199,7 +199,7 @@
     min-width: 50%;
     position: relative;
     overflow: hidden;
-    aspect-ratio: auto 1.86333333;
+    aspect-ratio: auto 559 / 300;
   }
   .articleLayout .contentContainer .middleWrapper .image img {
     height: 100%;
@@ -309,7 +309,7 @@
     width: 100%;
     position: relative;
     overflow: hidden;
-    aspect-ratio: auto 1.86333333;
+    aspect-ratio: auto 559 / 300;
   }
   .articleLayout .contentContainer .middleWrapper .image img {
     height: 100%;
@@ -365,7 +365,7 @@
   }
   .newsletterLayout .header .imageWrapper {
     width: 80%;
-    aspect-ratio: auto 2.9495549;
+    aspect-ratio: auto 994 / 337;
     margin: 32px auto;
     overflow: hidden;
     cursor: pointer;
@@ -385,7 +385,7 @@
   .newsletterLayout .contentContainer .image {
     margin: 48px auto;
     max-width: 749px;
-    aspect-ratio: auto 2.43558282;
+    aspect-ratio: auto 794 / 326;
     overflow: hidden;
     position: relative;
   }
@@ -426,7 +426,7 @@
     margin: 0 8px;
   }
   .newsletterLayout .header .imageWrapper {
-    aspect-ratio: auto 2.9495549;
+    aspect-ratio: auto 994 / 337;
     margin: 32px auto;
     overflow: hidden;
     cursor: pointer;
@@ -446,7 +446,7 @@
   .newsletterLayout .contentContainer .image {
     margin: 48px auto;
     min-width: 100%;
-    aspect-ratio: auto 2.43558282;
+    aspect-ratio: auto 794 / 326;
     overflow: hidden;
     position: relative;
   }
@@ -490,7 +490,7 @@
   .newsletterLayout .header .imageWrapper {
     max-width: 100%;
     min-height: 200px;
-    aspect-ratio: auto 2.9495549;
+    aspect-ratio: auto 994 / 337;
     margin: 16px auto;
     overflow: hidden;
     position: relative;
@@ -509,7 +509,7 @@
   .newsletterLayout .contentContainer .image {
     max-width: 100%;
     min-height: 200px;
-    aspect-ratio: auto 2.9495549;
+    aspect-ratio: auto 994 / 337;
     margin: 16px auto;
     overflow: hidden;
     position: relative;
